feat: Structured Task Scope