@@ -6,7 +6,6 @@ import java.util.concurrent.TimeUnit;
 public class Test {
     public static void main(String[] args) throws InterruptedException {
         // getHelloRunnable();
-        // getHelloThread();
         // getThreadSleep();
         // getInterrupt();
         // getJoin();
@@ -18,157 +17,133 @@ public class Test {
     }
 
     private static void getHelloRunnable() {
-        Thread t = new Thread(new HelloRunnable());
-        t.start();
-    }
-
-    private static void getHelloThread() {
-        new HelloThread().start();
+        Thread.ofPlatform()
+                .start(new HelloRunnable());
     }
 
     private static void getThreadSleep() {
-        System.out.println("main thread running");
-        new Thread(new Runnable() {
-            @Override
-            public void run() {
-                int amount = 5;
-                for (int i = 0; i < amount; i++) {
-                    System.out.println(i);
-                    try {
-                        Thread.sleep(1000);
-                    } catch (InterruptedException ignored) {
+        IO.println("main thread running");
+        Thread.ofPlatform()
+                .start(() -> {
+                    int amount = 5;
+                    for (int i = 0; i < amount; i++) {
+                        IO.println(i);
+                        try {
+                            TimeUnit.SECONDS.sleep(1);
+                        } catch (InterruptedException ignored) {
+                        }
                     }
-                }
-            }
-        }).start();
-        System.out.println("main thread ending");
-    }
-
-    //
-    private static void getThreadSleep2() {
-        System.out.println("main thread running");
-        new Thread(new Runnable() {
-            @Override
-            public void run() {
-                int amount = 5;
-                for (int i = 0; i < amount; i++) {
-                    System.out.println(i);
-                    try {
-                        TimeUnit.SECONDS.sleep(1);
-                    } catch (InterruptedException ignored) {
-                    }
-                }
-            }
-        }).start();
-        System.out.println("main thread ending");
+                });
+        IO.println("main thread ending");
     }
 
     private static void getInterrupt() throws InterruptedException {
-        Thread t = new Thread(() -> {
-            for (int i = 0; i < 5; i++) {
-                System.out.println(i);
-                try {
-                    Thread.sleep(1000);
-                } catch (InterruptedException ignored) {
-                    System.out.println("Interrupted");
-                    return;
-                }
-            }
-        });
-        t.start();
+        var t = Thread.ofPlatform()
+                .start(() -> {
+                    for (int i = 0; i < 5; i++) {
+                        IO.println(i);
+                        try {
+                            TimeUnit.SECONDS.sleep(1);
+                        } catch (InterruptedException ignored) {
+                            IO.println("Interrupted");
+                            return;
+                        }
+                    }
+                });
         // 主线程sleep，确保子线程已经开始执行
-        Thread.sleep(2000);
+        TimeUnit.SECONDS.sleep(2);
         // 中断子线程
         t.interrupt();
     }
 
     private static void getJoin() throws InterruptedException {
-        System.out.println("main thread running");
-        Thread t = new Thread(() -> {
-            for (int i = 0; i < 5; i++) {
-                System.out.println(i);
-                try {
-                    Thread.sleep(1000);
-                } catch (InterruptedException ignored) {
-                }
-            }
-        });
-        t.start();
+        IO.println("main thread running");
+        var t = Thread.ofPlatform()
+                .start(() -> {
+                    for (int i = 0; i < 5; i++) {
+                        IO.println(i);
+                        try {
+                            TimeUnit.SECONDS.sleep(1);
+                        } catch (InterruptedException ignored) {
+                        }
+                    }
+                });
         t.join();
-        System.out.println("main thread ending");
+        IO.println("main thread ending");
     }
+
     // 未使用同步，累加结果错误
     private static void getThreadInterference() throws InterruptedException {
         Counter counter = new Counter();
         int count = 800;
         CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; i++) {
-            new Thread(() -> {
-                counter.increment();
-                latch.countDown();
-            }).start();
+            Thread.ofPlatform()
+                    .start(() -> {
+                        counter.increment();
+                        latch.countDown();
+                    });
         }
         // 主线程执行到方此法将阻塞，直至锁计数器为零
         latch.await();
-        System.out.println("执行结课：" + counter.getC());
+        IO.println("执行结课：" + counter.getC());
     }
+
     private static void getThreadInterferenceSync() throws InterruptedException {
         Counter counter = new Counter();
         int count = 800;
         CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; i++) {
-            new Thread(() -> {
-                counter.incrementSync();
-                latch.countDown();
-            }).start();
+            Thread.ofPlatform()
+                    .start(() -> {
+                        counter.incrementSync();
+                        latch.countDown();
+                    });
         }
         latch.await();
-        System.out.println("执行结课：" + counter.getC());
+        IO.println("执行结课：" + counter.getC());
     }
 
     private static void getThreadInterference2() throws InterruptedException {
         int count = 800;
         CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; i++) {
-            new Thread(() -> {
-                Counter2.increment();
-                latch.countDown();
-            }).start();
+            Thread.ofPlatform()
+                    .start(() -> {
+                        Counter2.increment();
+                        latch.countDown();
+                    });
         }
         latch.await();
-        System.out.println("执行结课：" + Counter2.value());
+        IO.println("执行结课：" + Counter2.value());
     }
 
     private static void getThreadInterference3() throws InterruptedException {
         int count = 800;
         CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; i++) {
-            new Thread(() -> {
-                Counter3.increment();
-                latch.countDown();
-            }).start();
+            Thread.ofPlatform()
+                    .start(() -> {
+                        Counter3.increment();
+                        latch.countDown();
+                    });
         }
         latch.await();
-        System.out.println("执行结课：" + Counter3.value());
+        IO.println("执行结课：" + Counter3.value());
     }
 
     private static void getVolatile() throws InterruptedException {
         int count = 8_000;
         CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; i++) {
-            new Thread(() -> {
-                VolatileCount.increment();
-                latch.countDown();
-            }).start();
+            Thread.ofPlatform()
+                    .start(() -> {
+                        VolatileCount.increment();
+                        latch.countDown();
+                    });
         }
         latch.await();
-        System.out.println("执行结课：" + VolatileCount.value());
+        IO.println("执行结课：" + VolatileCount.value());
     }
 
-    private static void ofPlatformTest() {
-        Runnable r = () -> System.out.println("hello");
-        // 构建平台线程构造器，并执行任务
-        Thread.ofPlatform()
-                .start(r);
-    }
 }
